fix: cards visibility error

--- a/src/components/CarListItem/CarListItem.module.css
+++ b/src/components/CarListItem/CarListItem.module.css
@@ -1,5 +1,6 @@
 .card {
   width: 276px;
+  min-height: 424px;
   position: relative;
   padding: 268px 0 0 0;
   border: 0;
